src/objects/School_Attendence__c.object
<CustomObject>
    <fields>
        <fullName>Amount_in_Yen__c</fullName>
        <label>Amount (in Yen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>Your Class</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>XI</fullName>
                </value>
                <value>
                    <fullName>XII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of Student</description>
        <inlineHelpText>Your Name</inlineHelpText>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <description>Student Roll No</description>
        <inlineHelpText>Your Roll No</inlineHelpText>
        <label>Roll Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Attendence_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Attendence Name</label>
        <referenceTo>School_Attendence__c</referenceTo>
        <relationshipLabel>School Attendences</relationshipLabel>
        <relationshipName>School_Attendences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>School Attendence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Q1_School_Attendence</fullName>
        <filterScope>Queue</filterScope>
        <label>Q1</label>
        <queue>Q1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendence Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Attendences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>